--- a/DigitallyPowerful/Views/Home/Index.cshtml
+++ b/DigitallyPowerful/Views/Home/Index.cshtml
@@ -282,8 +282,160 @@
             </div>
         </section>
         <!-- End Portfolio Section -->
-        <!-- ======= Team Section ======= -->
         <section id="team" class="team section-bg">
+            <div class="container" data-aos="fade-up">
+
+                <div class="section-title">
+                    <h2>Team</h2>
+                    <p>The perfect platform for brands and digital media influencers to connect and produce the most awesome campaigns!</p>
+                </div>
+                <div class="container">
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators" style="bottom: -32px !important;">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <div class="row">
+
+                                    <div class="col-lg-6">
+                                        <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
+                                            <div class="pic"><img src="~/images/team/team-1.jpg" class="img-fluid" alt=""></div>
+                                            <div class="member-info">
+                                                <h4>Abiram Siddarth</h4>
+                                                <span>Content Marketing Manager</span>
+                                                <p>Create, edit and improve the content that audience is looking for and optimize the path to conversion.</p>
+                                                <div class="social">
+                                                    <a href=""><i class="ri-twitter-fill"></i></a>
+                                                    <a href=""><i class="ri-facebook-fill"></i></a>
+                                                    <a href=""><i class="ri-instagram-fill"></i></a>
+                                                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-6 mt-4 mt-lg-0">
+                                        <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
+                                            <div class="pic"><img src="~/images/team/team-2.jpg" class="img-fluid" alt=""></div>
+                                            <div class="member-info">
+                                                <h4>Naveen Prasad</h4>
+                                                <span>Social Media Marketing Expert</span>
+                                                <p>Create social media marketing strategy and campaign by content idea, budget plan, implementing schedules.</p>
+                                                <div class="social">
+                                                    <a href=""><i class="ri-twitter-fill"></i></a>
+                                                    <a href=""><i class="ri-facebook-fill"></i></a>
+                                                    <a href=""><i class="ri-instagram-fill"></i></a>
+                                                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <div class="item">
+                                <div class="row">
+
+                                    <div class="col-lg-6">
+                                        <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
+                                            <div class="pic"><img src="~/images/team/team-1.jpg" class="img-fluid" alt=""></div>
+                                            <div class="member-info">
+                                                <h4>Abiram Siddarth</h4>
+                                                <span>Content Marketing Manager</span>
+                                                <p>Create, edit and improve the content that audience is looking for and optimize the path to conversion.</p>
+                                                <div class="social">
+                                                    <a href=""><i class="ri-twitter-fill"></i></a>
+                                                    <a href=""><i class="ri-facebook-fill"></i></a>
+                                                    <a href=""><i class="ri-instagram-fill"></i></a>
+                                                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-6 mt-4 mt-lg-0">
+                                        <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
+                                            <div class="pic"><img src="~/images/team/team-2.jpg" class="img-fluid" alt=""></div>
+                                            <div class="member-info">
+                                                <h4>Naveen Prasad</h4>
+                                                <span>Social Media Marketing Expert</span>
+                                                <p>Create social media marketing strategy and campaign by content idea, budget plan, implementing schedules.</p>
+                                                <div class="social">
+                                                    <a href=""><i class="ri-twitter-fill"></i></a>
+                                                    <a href=""><i class="ri-facebook-fill"></i></a>
+                                                    <a href=""><i class="ri-instagram-fill"></i></a>
+                                                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <div class="item">
+                                <div class="row">
+
+                                    <div class="col-lg-6">
+                                        <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
+                                            <div class="pic"><img src="~/images/team/team-1.jpg" class="img-fluid" alt=""></div>
+                                            <div class="member-info">
+                                                <h4>Abiram Siddarth</h4>
+                                                <span>Content Marketing Manager</span>
+                                                <p>Create, edit and improve the content that audience is looking for and optimize the path to conversion.</p>
+                                                <div class="social">
+                                                    <a href=""><i class="ri-twitter-fill"></i></a>
+                                                    <a href=""><i class="ri-facebook-fill"></i></a>
+                                                    <a href=""><i class="ri-instagram-fill"></i></a>
+                                                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-6 mt-4 mt-lg-0">
+                                        <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
+                                            <div class="pic"><img src="~/images/team/team-2.jpg" class="img-fluid" alt=""></div>
+                                            <div class="member-info">
+                                                <h4>Naveen Prasad</h4>
+                                                <span>Social Media Marketing Expert</span>
+                                                <p>Create social media marketing strategy and campaign by content idea, budget plan, implementing schedules.</p>
+                                                <div class="social">
+                                                    <a href=""><i class="ri-twitter-fill"></i></a>
+                                                    <a href=""><i class="ri-facebook-fill"></i></a>
+                                                    <a href=""><i class="ri-instagram-fill"></i></a>
+                                                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Left and right controls -->
+                        <!--<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>-->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ======= Team Section ======= -->
+        @*<section id="team" class="team section-bg">
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
@@ -330,7 +482,7 @@
                 </div>
 
             </div>
-        </section>
+        </section>*@
         <!-- End Team Section -->
 
     </main>
