--- a/DigitallyPowerful/Views/Shared/_Layout.cshtml
+++ b/DigitallyPowerful/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
                                 10th St Ashtalakshmi Nagar <br>
                                 Valasaravakkam, Chennai - 600095<br>
                                 Tamil Nadu, India <br><br>
-                                <strong>Phone: </strong>+91 93420 38434<br>
+                                <strong>Phone: </strong><a href="tel:+91-93420-38434">+91 93420 38434</a><br>
                                 <strong>Email: </strong><a href="mailto:contact@digitallypowerful.com">contact@digitallypowerful.com</a><br>
                             </p>
                         </div>
