--- a/DigitallyPowerful/Views/User/Sign_up.cshtml
+++ b/DigitallyPowerful/Views/User/Sign_up.cshtml
@@ -9,7 +9,7 @@
 <body class="login">
 
     <div class="wrapper wrapper-login wrapper-login-full p-0" style="top:20px !important">
-        <div class="login-aside w-50 d-flex flex-column align-items-center text-center" style="background: linear-gradient( 90deg, #74ebd5 0%,#acb6e5 100% );">
+        <div class="login-aside w-50 d-flex flex-column align-items-center text-center" style="background: linear-gradient( 90deg, #46b3e4 0%,#3f51b5 100% );">
             <h1 class="title fw-bold text-white mb-3"></h1>
             <p class="subtitle text-white op-7">Sign up to create a tailored campaign with the influencers associated with Digitally Powerful or use the below option to contact us.</p>
             <div class="w-100">
@@ -72,7 +72,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-4 ml-auto mr-auto">
-                                <button class="btn btn-primary btn-round" id="BrandContact_send">
+                                <button class="btn btn-success btn-round" id="BrandContact_send">
                                     Submit &nbsp;
                                     <span class="btn-label">
                                         <i class="far fa-paper-plane"></i>
