Trippy logo and techiepods site link added

--- a/DigitallyPowerful/Views/Home/Index.cshtml
+++ b/DigitallyPowerful/Views/Home/Index.cshtml
@@ -47,14 +47,14 @@
                             <div class="col-12">
                                 <div class="ls-items" id="ls-items">
                                     <div class="img d-block text-center">
-                                        <img src="~/images/Brands/Trippy.jpg" alt="Trippy">
+                                        <img src="~/images/Brands/Trippy.png" alt="Trippy">
                                     </div>
                                     <div class="img d-block text-center">
-                                        <img src="~/images/Brands/Young.PNG" alt="Young Bull">
+                                        <img src="~/images/Brands/YoungBull.jpg" alt="Young Bull">
                                     </div>
                                     <div class="img d-block text-center">
                                         <img src="~/images/Brands/SaravanaStores.PNG" alt="Saravana Selvarathnam">
-                                    </div>                                  
+                                    </div>
                                     <div class="img d-block text-center">
                                         <img src="~/images/Brands/Shush.JPG" alt="Shush">
                                     </div>
@@ -69,6 +69,9 @@
                                     </div>
                                     <div class="img d-block text-center">
                                         <img src="~/images/Brands/BoxTheory.jpg" alt="Box Theory">
+                                    </div>
+                                    <div class="img d-block text-center">
+                                        <img src="~/images/Brands/GoXtreme.png" alt="GoXtreme">
                                     </div>
                                     <div class="img d-block text-center">
                                         <img src="~/images/Brands/Deyga.jpg" alt="Deyga">
@@ -324,7 +327,7 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="img">
-                                                    <img src="~/images/Brands/Trippy.jpg" alt="Trippy" class="borderRadius" />
+                                                    <img src="~/images/Brands/Trippy.png" alt="Trippy" class="borderRadius" />
                                                 </div>
                                             </div>
 
