--- a/DigitallyPowerful/Views/User/Sign_up.cshtml
+++ b/DigitallyPowerful/Views/User/Sign_up.cshtml
@@ -60,6 +60,14 @@
                                     <label for="BrandContact_Category">Category</label>
                                     <input type="email" class="form-control" id="BrandContact_Category" placeholder="Enter Category">
                                 </div>
+                               
+                            </div>
+                        </div>
+                        <div class="row" style="display:none" id="BrandContact_WebMsg">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <h5 class="text-white">We have partnered with <a style="color: black; font-size: medium; font-weight: 700;" href="https://www.techiepods.com">TechiePods</a> to design the most creative and inspiring website for your Brand.</h5>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
