Bug fixes for Mobile validation and social network id

--- a/DigitallyPowerful/Views/User/Sign_up.cshtml
+++ b/DigitallyPowerful/Views/User/Sign_up.cshtml
@@ -129,7 +129,7 @@
                     <div class="row form-sub m-0">
                         <div class="custom-control custom-checkbox">
                             <input type="checkbox" class="custom-control-input" name="agree_Brand" id="agree_Brand">
-                            <label class="custom-control-label" for="agree_Brand">I Agree to the terms and conditions. *</label>
+                            <label class="custom-control-label" for="agree_Brand">I Agree to the <a asp-controller="Home" asp-action="TermsandCondition" target="_blank">terms and conditions. *</a></label>
                         </div>
                     </div>
                     <div class="form-action">
