--- a/DigitallyPowerful/Views/Home/Index.cshtml
+++ b/DigitallyPowerful/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
                     <h1>Get Digitally Powered With Us</h1>
-                    <h2>Best marketing solutions at one move. We are team of talented influencers making Business Grow</h2>
+                    <h2>Best marketing solutions at one move. We are team of talented influencers who help businesses Grow</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <div class="row">
                             <div class="col-md-6">
@@ -97,18 +97,15 @@
 
                 <div class="section-title">
                     <h2>About Us</h2>
+                    <p>
+                        Digitally Powerful is a team of influencers, content creators and meme creators who are dedicated in fulfilling the digital marketing requirements of their clients. We work to build effective plans that focus on creating and connecting your content to the world, all while keeping your need for digital success in mind.
+                    </p><br />
+                    <p>
+                        At Digitally Powerful, our sharp eye for detail in identifying key insights helps to create value from data that can drive meaningful creativity to your ideal audience. By partnering with us, we will bring to the table a wide range of content options, open and friendly communication, and strong execution that delivers measurable results.
+                    </p>
                 </div>
 
-                <div class="row content">
-                    <div class="col-lg-12">
-                        <p>
-                            Digitally Powerful is a team of influencers and content creators who are dedicated in fulfilling the digital marketing requirements of their clients. We work to build effective plans that focus on creating and connecting your content to the world, all while keeping your need for digital success in mind.
-                        </p>
-                        <p>
-                            At Digitally Powerful, our sharp eye for detail in identifying key insights helps to create value from data that can drive meaningful creativity to your ideal audience. By partnering with us, we will bring to the table a wide range of content options, open and friendly communication, and strong execution that delivers measurable results.
-                        </p>
-                    </div>
-                </div>
+               
             </div>
         </section>
         <!-- End About Us Section -->
@@ -207,9 +204,9 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-Influencers">
-                        <div class="portfolio-img"><img src="~/images/Influencers/Ananya.JPG" class="img-fluid" alt="Ananya"></div>
+                        <div class="portfolio-img"><img src="~/images/Influencers/Ananya.JPG" class="img-fluid" alt="Aananya"></div>
                         <div class="portfolio-info">
-                            <h4>Ananya</h4>
+                            <h4>Aananya</h4>
                         </div>
                     </div>
 
@@ -253,13 +250,13 @@
                                             <div class="member-info">
                                                 <h4>What is Meme Marketing?</h4>
                                                 <p>
-                                                    It is no denying that we often find ourselves dragged into the whirlpool of memes, no matter what social media platform we are using Facebook, Twitter, Instagram, Tumblr or even Pinterest. Memes have become so popular on social media that there are social media profiles completely dedicated towards creating and sharing memes with their followers. Such social media ‘memers’ have managed to gather a huge following over the years through their humor.
+                                                    There is no denying that we often find ourselves dragged into the whirlpool of memes, no matter what social media platform we are using Facebook, Twitter, Instagram, Tumblr or even Pinterest. Memes have become so popular on social media that there are social media profiles completely dedicated towards creating and sharing memes with their followers. Such social media ‘memers’ have managed to gather a huge following over the years through their humor.
                                                 </p>
                                                 <p>
                                                     Like so, the meme culture has become a huge untapped opportunity for the marketers to increase brand advocacy. Meme marketing has become an extension of viral marketing. Keeping in mind the reachability of memes, brands are now targeting the meme community to create brand awareness.
                                                 </p>
                                                 <p>
-                                                    This is more commonly termed as memejacking among the marketers. It simply means the use of memes in order to maximize brand advocacy by placing them carefully on these social media stimulants.
+                                                    This is more commonly termed as memejacking among the marketers. It simply means using memes to maximize brand advocacy by placing them carefully on these social media stimulants.
                                                 </p>
                                             </div>
                                         </div>
@@ -299,15 +296,15 @@
                         <div class="row justify-content-center">
 
                             <div class="col-12">
-                                <div class="ts-items-sec" id="ts-items-sec">
+                                <div class="ts-items-sec height-300px" id="ts-items-sec">
                                     <div class="tys-item active">
                                         <div class="row">
-                                            <div class="col-md-6">
+                                            <div class="col-md-4">
                                                 <div class="img">
-                                                    <img src="~/images/Brands/SurpriseMachi.JPG" alt="Surprise Machi" class="borderRadius" />
+                                                    <img src="~/images/Brands/SurpriseMachi.JPG" alt="Surprise Machi" class="borderRadius Testimonialimg" />
                                                 </div>
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="col-md-8">
                                                 <div class="tsi-bottom">
                                                     <h2>Surprise Machi</h2>
                                                     <h4>says</h4>
@@ -325,14 +322,14 @@
                                     </div>
                                     <div class="tys-item">
                                         <div class="row">
-                                            <div class="col-md-6">
+                                            <div class="col-md-4">
                                                 <div class="img">
-                                                    <img src="~/images/Brands/Trippy.png" alt="Trippy" class="borderRadius" />
+                                                    <img src="~/images/Brands/Trippy.png" alt="Trippy" class="borderRadius Testimonialimg" />
                                                 </div>
                                             </div>
 
 
-                                            <div class="col-md-6">
+                                            <div class="col-md-8">
                                                 <div class="tsi-bottom">
                                                     <h2>Trippy Clothing</h2>
                                                     <h4>says</h4>
@@ -348,13 +345,13 @@
                                     </div>
                                     <div class="tys-item">
                                         <div class="row">
-                                            <div class="col-md-6">
+                                            <div class="col-md-4">
                                                 <div class="img">
-                                                    <img src="~/images/Brands/RadioMirchi.jpg" alt="Young Bull" class="borderRadius" />
+                                                    <img src="~/images/Brands/RadioMirchi.jpg" alt="Young Bull" class="borderRadius Testimonialimg" />
                                                 </div>
                                             </div>
 
-                                            <div class="col-md-6">
+                                            <div class="col-md-8">
                                                 <div class="tsi-bottom">
                                                     <h2>Radio Mirchi</h2>
                                                     <h4>says</h4>
