--- a/DigitallyPowerful/Views/Shared/_Layout.cshtml
+++ b/DigitallyPowerful/Views/Shared/_Layout.cshtml
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Digitally Powerful</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <meta content="One stop solution for Profile Management | Digital Promotions | Brand Development | Advertising | Content Marketing | SEO, PPC and much more" name="description">
+    <meta content="One stop solution for Profile Management, Digital Promotions, Brand Development, Advertising, Content Marketing, Influencers, Meme Marketing, Meme Creators, Content Creators, Promotions, Branding, Advertisements, Ad, SEO, PPC" name="keywords">
 
     <!-- Favicons -->
     <link href="~/images/favicon.png" rel="icon">
